--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
 {% include banner.html %}
 <div id="panel-container">
 	<div id="panel-one">
+		{% include naxLinuxInstallHelp.html %}
 	</div>
 	<div id="content-panel">
 		{{content}}
