--- a/css/screen.css
+++ b/css/screen.css
@@ -42,7 +42,7 @@ header div { margin:4px; }
 /**
  * Side Panel
  */
-#panel-one nav {
+#panel-one div {
 	border:2px solid #000; margin-bottom:0.5em;
 	border-radius:10px;
 	overflow:hidden;
