Updated nav links

--- a/_includes/navLinuxInstallHelp.html
+++ b/_includes/navLinuxInstallHelp.html
@@ -1,6 +1,5 @@
 <div>
-	<h2><a href="{{site.baseurl}}/LinuxInstallHelp">Linux Install Help</a>
-	</h2>
+	<h2><a href="{{site.baseurl}}/LinuxInstallHelp">Linux Help</a></h2>
 	<ul><li><a href="{{site.baseurl}}/LinuxInstallHelp/Ubuntu-Installation.html">Ubuntu Install</a></li>
 		<li><a href="{{site.baseurl}}/LinuxInstallHelp/MySQL.html">MySQL</a></li>
 		<li><a href="{{site.baseurl}}/LinuxInstallHelp/Apache.html">Apache</a></li>
