--- a/css/screen.css
+++ b/css/screen.css
@@ -48,9 +48,10 @@ header div { margin:4px; }
 	overflow:hidden;
 }
 #panel-one h2 {
-	background-color:#36c; color:#fff;
+	background-color:#036; color:#fff;
 	border-bottom:2px solid #000;
 	margin:0; padding:.25em;
 }
+#panel-one h2 a { color:#fff; }
 #panel-one ul { margin:.25em; padding:0; }
 #panel-one a { font-weight:bold; color:#000; }
