Added css for syntax highlighting

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,6 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/screen.css" />
+	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/syntax.css" />
 	<title>{{page.title}}</title>
 </head>
