--- a/_includes/navLinuxInstallHelp.html
+++ b/_includes/navLinuxInstallHelp.html
@@ -1,4 +1,4 @@
-<div>
+<nav>
 	<h2><a href="{{site.baseurl}}/LinuxInstallHelp/index.html">Linux Help</a></h2>
 	<ul><li><a href="{{site.baseurl}}/LinuxInstallHelp/Ubuntu-Installation.html">Ubuntu Install</a></li>
 		<li><a href="{{site.baseurl}}/LinuxInstallHelp/MySQL.html">MySQL</a></li>
@@ -10,4 +10,4 @@
 		<li><a href="{{site.baseurl}}/LinuxInstallHelp/CAS.html">CAS</a></li>
 		<li><a href="{{site.baseurl}}/LinuxInstallHelp/Solr.html">Solr</a></li>
 	</ul>
-</div>
+</nav>
