--- a/css/screen.css
+++ b/css/screen.css
@@ -25,7 +25,7 @@ label { font-weight:bold; }
 /**
  * Banner
  */
-header { color:#fff; background-color:#036; margin:0; }
+header { color:#fff; background:#036 url('images/citylogo-white.gif') top left no-repeat; margin:0; padding-left:68px; }
 header a { color:#fff; font-weight:bold; }
 header h1 { margin:0 4px; font-size:174%; }
 header div { margin:4px; }
@@ -42,7 +42,7 @@ header div { margin:4px; }
 /**
  * Side Panel
  */
-#panel-one div {
+#panel-one nav {
 	border:2px solid #000; margin-bottom:0.5em;
 	border-radius:10px;
 	overflow:hidden;
