--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,7 +1,7 @@
 <header>
-	<h1><a href="{{site.baseurl}}">City of Bloomington</a></h1>
+    <div id="github_link"><a href="http://github.com/City-of-Bloomington">Our Github Projects</a></div>
+	<h1><a href="{{site.baseurl}}">City of Bloomington, Indiana</a></h1>
 	<div id="location_name">
-		<a href="{{site.baseurl}}">City of Bloomington, Mark Kruzan, Mayor</a>
+		<a href="{{site.baseurl}}">Mark Kruzan, Mayor</a>
 	</div>
 </header>
-
