--- a/css/screen.css
+++ b/css/screen.css
@@ -3,6 +3,7 @@
  */
 body { font-family:sans-serif; }
 
+h1 { font-size:150% font-weight:bold; }
 h2 { font-size:131%; font-weight:bold; margin:.5em 0; color:#036; }
 h3 { font-size:123.1%; font-weight:bold;  margin:.5em 0 .25em 0; }
 h4 { font-size:100%; font-weight:bold; }
@@ -25,7 +26,12 @@ label { font-weight:bold; }
 /**
  * Banner
  */
-header { color:#fff; background:#036 url('images/citylogo-white.gif') top left no-repeat; margin:0; padding-left:68px; }
+header {
+    color:#fff; background:#036 url('images/citylogo-white.gif') top left no-repeat;
+    margin:0; padding-left:68px;
+    height:68px;
+}
+header #github_link { float:right; width:200px; text-align:right; }
 header a { color:#fff; font-weight:bold; }
 header h1 { margin:0 4px; font-size:174%; }
 header div { margin:4px; }
