Fixed banner url for sub-pages

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,7 +1,7 @@
 <header>
     <div id="github_link"><a href="http://github.com/City-of-Bloomington">Our Github Projects</a></div>
-	<h1><a href="{{site.baseurl}}">City of Bloomington, Indiana</a></h1>
+	<h1><a href="http://city-of-bloomington.github.io/">City of Bloomington, Indiana</a></h1>
 	<div id="location_name">
-		<a href="{{site.baseurl}}">Mark Kruzan, Mayor</a>
+		<a href="http://city-of-bloomington.github.io/">Mark Kruzan, Mayor</a>
 	</div>
 </header>
