First iteration of Github pages re-skin.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,15 @@
-<head>
-	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/reset.css" />
-	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/screen.css" />
-	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/syntax.css" />
-	<title>{{page.title}}</title>
-</head>
+<header>
+	<div class="container">
+		<div class="site-title">
+			<h1><a href="http://city-of-bloomington.github.io/">City of Bloomington, Indiana</a></h1>
+			<div class="site-location">
+				<a href="http://city-of-bloomington.github.io/">Mark Kruzan, Mayor</a>
+			</div>
+		</div>
+	</div>
+	<div class="nav1">
+		<nav class="container">
+			{% include navLinuxInstallHelp.html %}
+		</nav>
+	</div>
+</header>
