--- a/_includes/navLinuxInstallHelp.html
+++ b/_includes/navLinuxInstallHelp.html
@@ -1,12 +1,10 @@
 <nav>
-	<h2><a href="{{site.baseurl}}/LinuxInstallHelp/index.html">Linux Help</a></h2>
-	<ul><li><a href="{{site.baseurl}}/LinuxInstallHelp/Ubuntu-Installation.html">Ubuntu Install</a></li>
-		<li><a href="{{site.baseurl}}/LinuxInstallHelp/MySQL.html">MySQL</a></li>
-		<li><a href="{{site.baseurl}}/LinuxInstallHelp/Apache.html">Apache</a></li>
-		<li><a href="{{site.baseurl}}/LinuxInstallHelp/PHP.html">PHP</a></li>
-		<li><a href="{{site.baseurl}}/LinuxInstallHelp/Java.html">Java</a></li>
-		<li><a href="{{site.baseurl}}/LinuxInstallHelp/Tomcat.html">Tomcat</a></li>
-		<li><a href="{{site.baseurl}}/LinuxInstallHelp/Tomcat-Connectors.html">Tomcat Connectors</a></li>
-		<li><a href="{{site.baseurl}}/LinuxInstallHelp/Solr.html">Solr</a></li>
-	</ul>
+	<a href="{{site.baseurl}}/LinuxInstallHelp/Ubuntu-Installation.html">Ubuntu Install</a>
+	<a href="{{site.baseurl}}/LinuxInstallHelp/MySQL.html">MySQL</a>
+	<a href="{{site.baseurl}}/LinuxInstallHelp/Apache.html">Apache</a>
+	<a href="{{site.baseurl}}/LinuxInstallHelp/PHP.html">PHP</a>
+	<a href="{{site.baseurl}}/LinuxInstallHelp/Java.html">Java</a>
+	<a href="{{site.baseurl}}/LinuxInstallHelp/Tomcat.html">Tomcat</a>
+	<a href="{{site.baseurl}}/LinuxInstallHelp/Tomcat-Connectors.html">Tomcat Connectors</a>
+	<a href="{{site.baseurl}}/LinuxInstallHelp/Solr.html">Solr</a>
 </nav>
