--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,5 +2,6 @@
 	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/screen.css" />
 	<link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/syntax.css" />
+	<link href='https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic|Lato:400,300' rel='stylesheet' type='text/css'>
 	<title>{{page.title}}</title>
 </head>
