updates to bloomington github pages

--- a/_includes/header-guide.html
+++ b/_includes/header-guide.html
@@ -9,7 +9,7 @@
 	</div>
 	<div class="nav1">
 		<nav class="container">
-			{% include common_nav.html %}
+			{% include navLinuxInstallHelp.html %}
 		</nav>
 	</div>
 </header>
