updating github.io pages

--- a/_includes/common_nav.html
+++ b/_includes/common_nav.html
@@ -1,5 +1,7 @@
 <nav>
-	<a href="{{site.baseurl}}/projects.html">Projects</a>
-	<a href="{{site.baseurl}}/gsoc.html">Google Summer of Code</a>
-	<a href="{{site.baseurl}}/LinuxInstallHelp/Ubuntu-Installation.html">Setup Guides</a>
+   <a href="{{site.baseurl}}/">Home</a>
+   <a href="{{site.baseurl}}/projects/index.html">Projects</a>
+   <a href="{{site.baseurl}}/guides/installation.html">Setup Guides</a>
+   <a href="{{site.baseurl}}/community/index.html">Community</a>
 </nav>
+
